--- a/include/Telescope.tex
+++ b/include/Telescope.tex
@@ -119,14 +119,9 @@ the up direction.
 The data-driven zero-suppressed mode (c.f. \cref{sec:TimepixReadout})
 is used for the data acquisition of the Timepix3 readout ASICs. 
 
-The SPIDR (Speedy PIxel Detector Readout) read-out system has been
-developed by NIKHEF and CERN is used~\cite{Visser:2015bsa}. This
-system is able to handle high rates of data sent by the Timepix3 ASIC
-at full speed. This is achieved with Xilinx Virtex-7
-FPGA~\cite{XilinxVirtex7} and a 10~Gb Ethernet link. This system
-allows to record the data from all the particles from the SPS spill
-and generates a huge amount of data for processing offline as
-described in \cref{sec:recoSoft}.
+This system allows to record the data from all the particles from the
+SPS spill and generates a huge amount of data for processing offline
+as described in \cref{sec:recoSoft}.
 
 
 %% --------------------------------------------- %%
